@@ -78,7 +78,7 @@ Version 1.9.0-svn:
  * Miscellaneous and bug fixes:
    * All villages except water and swamp villages can now be placed on any base
      terrain.
-
+   * Introduced a new allignement called "Liminal". Those units fight best during the twilight times of day.
 
 Version 1.8.0:
  * Campaigns:
